fix: 라운드 시작 시 일정 변경 정합성 보강